--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "homepage": "https://github.com/9Brothers/TypescriptHelpers#readme",
   "devDependencies": {
     "@types/jquery": "^3.3.2",
-    "jquery": "^3.3.1"
+    "amd-loader": "0.0.8",
+    "jquery": "^3.3.1",
+    "ts-loader": "^4.4.1",
+    "typescript": "^2.9.1",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3"
   }
 }
